# elements

./: .gitignore  CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.qrc  mainwindow.ui
DataSetCatalog/: CMakeLists.txt  DataSetCatalog_global.h  datasetcatalog.cpp  datasetcatalog.h
subassembly/: subassembly.cpp  subassembly.h  subassembly.ui
